# cpp-web-samples

./: .gitignore  README.md
emwebsocket/client/: CMakeLists.txt  README.md
emwebsocket/client/src/: Main.cpp
grpc/client/: CMakeLists.txt  README.md  vcpkg.json
grpc/client/src/: Main.cpp
grpc/proto/: example.proto
grpc/server/: CMakeLists.txt  vcpkg.json
grpc/server/src/: Main.cpp
rest/client/: CMakeLists.txt  vcpkg.json
rest/client/src/: Main.cpp
rest/server/src/: Main.cpp
rest/server/src/controllers/: RestController.cpp  RestController.h
websocket/client/: CMakeLists.txt  README.md  vcpkg.json
websocket/client/src/: Main.cpp
websocket/server/src/controllers/: EchoWebSocket.cpp  EchoWebSocket.h  RestController.cpp
